<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageViewVehiculoFletero_busqueda"
            android:layout_width="0dp"
            android:layout_height="150dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_vehiculo_na" />

        <TextView
            android:id="@+id/txtNombreFletero_ListaBusqueda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/nombre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewVehiculoFletero_busqueda" />

        <TextView
            android:id="@+id/txtTelefono_ListaBusqueda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/telefono"
            app:layout_constraintStart_toStartOf="@+id/txtNombreFletero_ListaBusqueda"
            app:layout_constraintTop_toBottomOf="@+id/txtNombreFletero_ListaBusqueda" />

        <LinearLayout
            android:id="@+id/llExpandAreaBusquedaFleteros"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTelefono_ListaBusqueda">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="4dp"
                >


                <TextView
                    android:id="@+id/textViewTipoTEXT_Busq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/tipo_de_caja"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/textViewMarcaTEXT_Busq"
                    app:layout_constraintTop_toTopOf="@+id/textViewMarcaTEXT_Busq" />

                <TextView
                    android:id="@+id/textViewTipo_V_Busq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tipo"
                    app:layout_constraintStart_toStartOf="@+id/textViewTipoTEXT_Busq"
                    app:layout_constraintTop_toTopOf="@+id/textViewMarca_V_Busq" />

                <TextView
                    android:id="@+id/textViewMarcaTEXT_Busq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/marca"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewMarca_V_Busq"
                    android:layout_width="58dp"
                    android:layout_height="42dp"
                    android:text="@string/marca"
                    app:layout_constraintStart_toStartOf="@+id/textViewMarcaTEXT_Busq"
                    app:layout_constraintTop_toBottomOf="@+id/textViewMarcaTEXT_Busq" />

                <TextView
                    android:id="@+id/textViewCaracTEXT_Busq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/caracter_sticas"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/textViewTipoTEXT_Busq"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textViewTipoTEXT_Busq"
                    app:layout_constraintTop_toTopOf="@+id/textViewTipoTEXT_Busq" />

                <TextView
                    android:id="@+id/textViewVol_V_Busq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/volumen"
                    app:layout_constraintStart_toStartOf="@+id/textViewCaracTEXT_Busq"
                    app:layout_constraintTop_toTopOf="@+id/textViewTipo_V_Busq" />

                <TextView
                    android:id="@+id/textViewMedidas_Busq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/medida"
                    app:layout_constraintStart_toStartOf="@+id/textViewVol_V_Busq"
                    app:layout_constraintTop_toBottomOf="@+id/textViewVol_V_Busq" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="right">
                <Button
                    android:id="@+id/btnMsjFletero"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:paddingTop="4dp"
                    android:layout_gravity="right"
                    android:text="@string/mensaje" />

                <Button
                    android:id="@+id/btnLlamarFletero"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:paddingTop="4dp"
                    android:layout_gravity="right"
                    android:text="@string/llamar" />
            </androidx.appcompat.widget.LinearLayoutCompat>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
