<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical"
    tools:context=".pantalla_AgregarArticulos">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtAgregarArticulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/agregar_articulos"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextNombreArticulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="99dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="99dp"
            android:background="@drawable/fondo_textos"
            android:ems="10"
            android:hint="@string/nombre"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAgregarArticulo" />

        <EditText
            android:id="@+id/editTextDescripcionArticulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="99dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="99dp"
            android:background="@drawable/fondo_textos"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/descripci_n"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNombreArticulo" />

        <TextView
            android:id="@+id/txtCantidadArticulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="1"
            app:layout_constraintEnd_toStartOf="@+id/imageButtonMas"
            app:layout_constraintStart_toEndOf="@+id/imageButtonMenos"
            app:layout_constraintTop_toBottomOf="@+id/editTextDescripcionArticulo" />

        <TextView
            android:id="@+id/txtCantidadTexto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/cantidad"
            app:layout_constraintEnd_toEndOf="@+id/txtCantidadArticulo"
            app:layout_constraintStart_toStartOf="@+id/txtCantidadArticulo"
            app:layout_constraintTop_toBottomOf="@+id/txtCantidadArticulo" />

        <Button
            android:id="@+id/btnAgregarArticulo"
            style="@style/FondoBoton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/fondo_botones"
            android:text="@string/agregar_a_la_lista"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAgregarFoto_Articulo" />

        <Button
            android:id="@+id/btnAgregarFoto_Articulo"
            style="@style/FondoBoton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/agregar_foto"
            app:layout_constraintBottom_toBottomOf="@+id/imageButtonMas"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageButtonMas"
            app:layout_constraintTop_toTopOf="@+id/imageButtonMas" />

        <ImageButton
            android:id="@+id/imageButtonMas"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@null"
            android:scaleType="centerCrop"
            android:tint="@color/colorBoton"
            app:layout_constraintBottom_toBottomOf="@+id/txtCantidadArticulo"
            app:layout_constraintEnd_toStartOf="@+id/btnAgregarFoto_Articulo"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageButtonMenos"
            app:layout_constraintTop_toTopOf="@+id/txtCantidadArticulo"
            app:srcCompat="@drawable/ic_anadir" />

        <ImageButton
            android:id="@+id/imageButtonMenos"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="20dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:scaleType="centerCrop"
            android:tint="@color/colorBoton"
            app:layout_constraintBottom_toBottomOf="@+id/txtCantidadArticulo"
            app:layout_constraintEnd_toStartOf="@+id/imageButtonMas"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtCantidadArticulo"
            app:srcCompat="@drawable/ic_menos" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/textViewArticulooTEXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/articulo_s"
            android:textSize="20sp"
            />


        <fragment
            android:id="@+id/fragment"
            android:name="com.example.ufletes.ListaArticulosFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.987" />

    </LinearLayout>

</LinearLayout>